force-app/main/default/objects/MaBVRate__c/MaBVRate__c.object-meta.xml
<CustomObject>
    <label>MaBV Rate</label>
    <nameField>
        <label>MaBV Rate-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MaBV Raten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>