force-app/main/default/objects/MaBVRate__c/fields/BenoetigtGenehmigung__c.field-meta.xml
<CustomField>
    <fullName>BenoetigtGenehmigung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benötigt Genehmigung?</label>
    <type>Checkbox</type>
</CustomField>