force-app/main/default/objects/MaBVRate__c/fields/DateFirstInvoice__c.field-meta.xml
<CustomField>
    <fullName>DateFirstInvoice__c</fullName>
    <label>Datum erste Rechnung</label>
    <type>Date</type>
</CustomField>