force-app/main/default/objects/MaBVRate__c/fields/DateLastInvoice__c.field-meta.xml
<CustomField>
    <fullName>DateLastInvoice__c</fullName>
    <label>Datum letzte Rechnung</label>
    <type>Date</type>
</CustomField>