force-app/main/default/objects/MaBVRate__c/fields/Faelligkeitsdatum__c.field-meta.xml
<CustomField>
    <fullName>Faelligkeitsdatum__c</fullName>
    <label>Fälligkeitsdatum</label>
    <required>true</required>
    <type>Date</type>
</CustomField>