force-app/main/default/objects/MaBVRate__c/fields/GesamtanzahlRechnungen__c.field-meta.xml
<CustomField>
    <fullName>GesamtanzahlRechnungen__c</fullName>
    <formula>GezahlteRechnungen__c + OffeneRechnungen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesamtanzahl Rechnungen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>