force-app/main/default/objects/MaBVRate__c/fields/GezahlteRechnungen__c.field-meta.xml
<CustomField>
    <fullName>GezahlteRechnungen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gezahlte Rechnungen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>