force-app/main/default/objects/MaBVRate__c/fields/Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Immobilie__c</fullName>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>MaBV Raten</relationshipLabel>
    <relationshipName>MaBV_Raten</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>