force-app/main/default/objects/MaBVRate__c/fields/LeistungszeitraumBis__c.field-meta.xml
<CustomField>
    <fullName>LeistungszeitraumBis__c</fullName>
    <label>Leistungszeitraum bis</label>
    <required>true</required>
    <type>Date</type>
</CustomField>