force-app/main/default/objects/MaBVRate__c/fields/LeistungszeitraumVon__c.field-meta.xml
<CustomField>
    <fullName>LeistungszeitraumVon__c</fullName>
    <label>Leistungszeitraum von</label>
    <required>true</required>
    <type>Date</type>
</CustomField>