force-app/main/default/objects/MaBVRate__c/fields/OffeneRechnungen__c.field-meta.xml
<CustomField>
    <fullName>OffeneRechnungen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offene Rechnungen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>