force-app/main/default/objects/MaBVRate__c/fields/PreisanpassungInEuro__c.field-meta.xml
<CustomField>
    <fullName>PreisanpassungInEuro__c</fullName>
    <label>Preisanpassung in €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>