force-app/main/default/objects/MaBVRate__c/fields/PreisanpassungInPercent__c.field-meta.xml
<CustomField>
    <fullName>PreisanpassungInPercent__c</fullName>
    <label>Preisanpassung in %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>