force-app/main/default/objects/MaBVRate__c/fields/RateInPercentage__c.field-meta.xml
<CustomField>
    <fullName>RateInPercentage__c</fullName>
    <label>Rate in %</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>