force-app/main/default/objects/MaBVRate__c/fields/SicherheitPlusInPercentage__c.field-meta.xml
<CustomField>
    <fullName>SicherheitPlusInPercentage__c</fullName>
    <inlineHelpText>In der Regel wird dieses Feld nur in der letzten MaBV Rate ausgefüllt und deckt sich mit dem Sicherheitseinbehalt der 1. Rate</inlineHelpText>
    <label>Sicherheit (plus) in %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>