force-app/main/default/objects/MaBVRate__c/fields/SummeGezahlterRechnungen__c.field-meta.xml
<CustomField>
    <fullName>SummeGezahlterRechnungen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Summe gezahlter Rechnungen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>