force-app/main/default/objects/MaBVRate__c/fields/SummeOffenerRechnungen__c.field-meta.xml
<CustomField>
    <fullName>SummeOffenerRechnungen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Summe offener Rechnungen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>